--- a/externalized-configuration/src/main/resources/application.properties
+++ b/externalized-configuration/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 car.name=Lexus
 car.color=sliver
 #car.producer=Japan
+
+#新增  支持Environment 获取配置
+evn.name=Neal
+evn.age=18
+
+#新增 支持 @ConfigurationProperties 类级别
+configuser.name=Lemon
+configuser.age=20
+
+#新增 支持 @ConfigurationProperties 方法级别以及类的嵌套绑定
+province.name=LiaoNing
+province.city.name=DaLian
