新增扩展外部化配置

--- a/expansion-externalized/pom.xml
+++ b/expansion-externalized/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>externalized-configuration</artifactId>
+    <artifactId>expansion-externalized</artifactId>
 
     <dependencies>
         <dependency>
